@@ -105,6 +105,9 @@ html_style = 'default.css'
 # "<project> v<release> documentation".
 #html_title = None
 
+# A shorter title for the navigation bar.  Default is the same as html_title.
+#html_short_title = None
+
 # The name of an image file (within the static path) to place at the top of
 # the sidebar.
 #html_logo = None
